@@ -12,8 +12,12 @@ import java.util.Map;
  * 
 
  */
-public class FixMessengerConstants
+public final class FixMessengerConstants
 {
+	private FixMessengerConstants()
+	{
+	}
+
 	public static final String UTC_DATE_FORMAT = "yyyyMMdd-HH:mm:ss.SSS";
 
 	public static final char SOH = '\001';
@@ -28,22 +32,17 @@ public class FixMessengerConstants
 	public static final String BEGIN_STRING_FIX50SP2 = "FIX.5.0SP2";
 	public static final String BEGIN_STRING_FIXT11 = "FIXT.1.1";
 
-	public static final Map<String, String> APPVER_ID_MAP;
-	static
-	{
-		Map<String, String> appVerIDMap = new HashMap<String, String>();
-
-		appVerIDMap.put(BEGIN_STRING_FIX40, "2");
-		appVerIDMap.put(BEGIN_STRING_FIX41, "3");
-		appVerIDMap.put(BEGIN_STRING_FIX42, "4");
-		appVerIDMap.put(BEGIN_STRING_FIX43, "5");
-		appVerIDMap.put(BEGIN_STRING_FIX44, "6");
-		appVerIDMap.put(BEGIN_STRING_FIX50, "7");
-		appVerIDMap.put(BEGIN_STRING_FIX50SP1, "8");
-		appVerIDMap.put(BEGIN_STRING_FIX50SP2, "9");
-
-		APPVER_ID_MAP = Collections.unmodifiableMap(appVerIDMap);
-	}
+	public static final Map<String, String> APPVER_ID_MAP = Collections.unmodifiableMap(
+			new HashMap<>(
+					Map.ofEntries(
+							Map.entry(BEGIN_STRING_FIX40, "2"),
+							Map.entry(BEGIN_STRING_FIX41, "3"),
+							Map.entry(BEGIN_STRING_FIX42, "4"),
+							Map.entry(BEGIN_STRING_FIX43, "5"),
+							Map.entry(BEGIN_STRING_FIX44, "6"),
+							Map.entry(BEGIN_STRING_FIX50, "7"),
+							Map.entry(BEGIN_STRING_FIX50SP1, "8"),
+							Map.entry(BEGIN_STRING_FIX50SP2, "9"))));
 
 	public static final String[] FIXT_APP_VERSIONS = { BEGIN_STRING_FIX40,
 			BEGIN_STRING_FIX41, BEGIN_STRING_FIX42, BEGIN_STRING_FIX43,
